Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <!-- metadata about the HTML document as a whole -->
-      <title>
+      <title>Welcome to my Blog!
       </title>
     </head>
 
