--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <!-- metadata about the HTML document as a whole -->
+      <title>Welcome to my Blog!
+      </title>
+    </head>
+
+    <body>
+        <!-- content of our page will be here! -->
+
+    </body>
+</html>
